# release

./: .coderabbit.yaml  .fusion-access-cnv-work.plan.md  .gitignore  .gitmodules  .snyk  0001-MULTIARCH-5768-Migrate-the-power-libvirt-CI-to-use-c.patch-old  1  :  =  AAP_PROVISION_FAILURE_ANALYSIS.md  ALERTS.md  CERTIFICATE_ROTATION_INVESTIGATION.md  CHAIBOT_QUICKSTART.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY_CHAIBOT.md  Dockerfile  EGRESSIP-AUTOMATION-FIX.md  ISSUE_TEMPLATE.md  M-A  Makefile  Makefile.legacy  OCPBUGS-70130-master-branch-test-plan.md  OWNERS  OWNERS_ALIASES  README.md  SUMMARY.md  Untitled  _boskos.yaml  a-debug-egress-ip.yaml  aap-analysis-summary.md  aap-state-comparison.md  b-debug-egress-ip.yaml  base64_config  check_gcs_volumes.py  ci  ci-operator.psap-workflow.md  ci-operator.step-registry.psap.workflow.md  cluster-comparison-analysis.md  cluster-profile-set-details.json  (+73 more)
.claude/: PR_SEPARATION_PLAN.md  SLASH_COMMANDS.md  settings.json
.work/: test-stream-json.md
ci-operator/: README.md  REHEARSALS.md  SECRETS.md  ci  populate-ci-operator-configs.sh  populate-configmaps.sh  populate-owners.sh  populate-secrets-from-bitwarden.sh  populate-templates.sh  todo_third_octet.txt  validate-ci-operator-config-filename.py
ci-operator/config/openshift/openshift-tests-private/tools/mcp_ci/: OWNERS  README.md  pyproject.toml
ci-operator/config/openshift/openshift-tests-private/tools/mcp_ci/clients/: .env  client.py
ci-operator/config/openshift/openshift-tests-private/tools/mcp_ci/servers/: OWNERS  ci_server.py
clusters/: JoinBuildFarm.md  README.md
(+124855 files in other folders)
