[project]
name = "mcp-ci"
version = "0.1.0"
description = "This is the AI tool which can help us create new upgrade jobs for new OCP releases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "mcp[cli]>=1.12.4",
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.14",
]
